# Makefile.am
# Copyright (C) 2022 g10 Code GmbH
#
# This file is part of PINENTRY.
#
# PINENTRY is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# PINENTRY is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <https://www.gnu.org/licenses/>.
# SPDX-License-Identifier: GPL-2.0+

## Process this file with automake to produce Makefile.in

EXTRA_DIST = data-error.svg \
	     pinentry.png \
	     hint.svg \
	     password-generate.svg \
         visibility.svg \
	     hint_dark.svg \
	     password-generate_dark.svg \
         visibility_dark.svg

icons_DATA = pinentry.png
iconsdir = $(datadir)/pixmaps
